app/assets/stylesheets/_optimum-visualisation.scss
.optimum-vis {
  &__meta {
    width: 15%;
    display: inline-block;
  }
  &__visual {
    width: 80%;
    padding: 20px 45px;
    display: inline-block;
    position: relative;
  }

  &__min,
  &__max,
  &__current {
    position: absolute;
    line-height: 68px;
    top: 0;
  }

  &__min {
    left: 0px;
  }
  &__max {
    right: 0px;
  }

  &__current {
    margin-left: -65px;
    text-align: center;
    color: #fff;
    font-size: 14px;
  }

  // ===== REMOVE EXISTING BROWSER DEFAULTS ======

  input[type=range] {
    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
    width: 100%; /* Specific width is required for Firefox. */
    background: transparent; /* Otherwise white in Chrome */
  }

  input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
  }

  input[type=range]:focus {
    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
  }

  input[type=range]::-ms-track {
    width: 100%;
    cursor: pointer;

    /* Hides the slider so custom styles can be added */
    background: transparent;
    border-color: transparent;
    color: transparent;
  }

  // ===== BEGIN CUSTOM RANGE INPUT STYLES =====\
  input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: none;
    height: 40px;
    width: 40px;
    border-radius: 20px;
    background: #6FCF97;
    margin-top: -16px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
  }

  &.--outside {
    input[type=range]::-webkit-slider-thumb {
      display: none;
    }
    .optimum-vis__current {
      display: none;
    }
  }

  input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 8px;
    background: #fff;
    border-radius: 8px;
  }

  input[type=range]:focus::-webkit-slider-runnable-track {
    background: #367ebd;
  }
}

